--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.47.0",
-    "zod": "^3.22.4"
+    "react-hook-form": "^7.47.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
